--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div class="marco">
 <h1 class="h1">Sweet Potato and Kale Bowl</h1>
-<p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam soluta magni labore ex nulla atque consectetur sint, voluptas illo ea dolorem iste veritatis perferendis dicta provident tenetur ratione! Dolorem.</p>
+<p class="parrafo">Lorem ipsum dolor sitt amet consectetur adipisicing elit. Pariatur nam soluta magni labore ex nulla atque consectetur sint, voluptas illo ea dolorem iste veritatis perferendis dicta provident tenetur ratione! Dolorem.</p>
 <img class="imagen" src="imagen1.jpg" alt="foto de comida">
 <h2 class="h2">Ingredients</h2>
 <h3 class="h3">For the sweet potato</h3>
